# sound-laser

./: .gitignore  README.md  main.tex  params.tex
analysis/: beamforming.ipynb  circuit_parameters.ipynb  i2c.ipynb  modulation.ipynb  movement.ipynb
analysis/measurements/: .gitignore  automatic_measuring.ipynb  evaluation.ipynb
analysis/software_test_data/: dac_off_values.rtf  dac_on_values.rtf  queue_size.csv  sine.csv  sine_1k.csv  sine_1k_am.csv  sine_1k_fm.csv  sine_time.csv  sine_time_fm.csv
docs/: .gitignore  IEEEtran_date.bst  Makefile  README.md  SoundLaser_Thesis.tex  main.tex  params.tex
hardware/circuit_board/: #auto_saved_files#  _autosave-sound_laser.kicad_sch  custom_symbols.bak  sound_laser.kicad_pcb  sound_laser.kicad_prl  sound_laser.kicad_pro  sound_laser.kicad_sch  sound_laser.xml
hardware/models/: 3:8UMC_hole.3mf  M3_hole_demo.3mf  Sound Laser.shapr  backplate.3mf  base.3mf  base_plate_demo.3mf  base_plate_demo_backplate.3mf  circuit_board.STEP  circuit_board.wrl  inductor_wuerth_5030.step  pcb_base.3mf  pcb_base.stl  pcb_demo.3mf  pcb_mount.3mf  pcb_plate.3mf  (+4 more)
setup/: setup.py
software/: .$software_structure.drawio.bkp  .$software_structure.drawio.dtmp  .gitignore  CMakeLists.txt  README.md  main.cpp  setup.py  software_structure.drawio
software/audio/: .gitignore  CMakeLists.txt  README.md  main.cpp  sequence_diagramm.drawio
software/audio/include/: modulation.hpp  speaker.hpp
software/audio/include/hal/: spi.hpp
software/audio/src/: audio.cpp  modulation.cpp  speaker.cpp
software/audio/src/hal/: pcm.cpp  spi.cpp
(+174 files in other folders)
